--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-dental-clinic-tests",
+  "name": "landing-pages-tests",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
